# podcare

./: .gitignore  README.md  names.txt  pyproject.toml
docs/superpowers/plans/: 2026-06-12-roadmap-stages-and-bookends.md
docs/superpowers/specs/: 2026-06-12-roadmap-stages-and-bookends-design.md
src/podcare/: __init__.py  _compat.py  audio_io.py  cli.py  config.py  dsp.py  mcp_server.py  pipeline.py  progress.py  session.py
src/podcare/stages/: align.py  breath.py  declick.py  deess.py  dehum.py  denoise.py  dereverb.py  dropouts.py  fillers.py  gate.py  leveler.py  master.py  mixdown.py  plosives.py  repair.py  resonance.py  silence.py  tonebalance.py
tests/: conftest.py  test_cli.py  test_config.py  test_dsp.py  test_mcp.py  test_pipeline.py  test_progress.py  test_stages.py
