[project]
name = "podcare"
version = "0.1.0"
description = "Turn raw podcast mic recordings into a polished, broadcast-ready episode."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "soundfile>=0.12",
    "noisereduce>=3.0",
    "nara-wpe>=0.0.9",
    "faster-whisper>=1.0",
    "deepfilternet>=0.5",
    "torch>=2.0",
    "torchaudio>=2.0",
    "soxr>=1.1.0",
]

[project.scripts]
podcare = "podcare.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podcare"]
